--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -75,7 +75,9 @@
 @import url("./../vendor/uicons-solid-rounded/css/uicons-solid-rounded.css");
 @import url("./../vendor/line-awesome/css/line-awesome.min.css");
 @import url("./../vendor/themify-icons/css/themify-icons.css");
-
+.text-primary1{
+    color: #FE9063!important;
+}
 :root {
     --primary: #FE9063;
     --secondary: #704FFE;
@@ -280,6 +282,9 @@
     --bs-form-invalid-color: #ff9ba8;
     --bs-form-invalid-border-color: #ff9ba8;
 }
+
+
+
 
 *,
 *::before,
@@ -26462,8 +26467,8 @@ ul.list-check li:after {
 }
 
 .top-right {
-    width: 9px;
-    height: 9px;
+    width: 12px;
+    height: 12px;
     background-color: #2651ea;
     border-radius: 50%;
     margin-top: 4px;
@@ -26473,8 +26478,21 @@ ul.list-check li:after {
     border: 1px solid #ffffff;
 }
 
-.pointer{
-  cursor: pointer;
+.badge_notif {
+    background-color: #2651ea;
+    border-radius: 50%;
+    border: 1px solid #ffffff;
 }
 
 
+
+ .header {
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    left: 0;
+    background-color: var(--primary-light);
+    backdrop-filter: blur(10px);
+    transition: all 0.5s;
+    width: 100%;
+}
